# dat.ai-mcp

./: .gitignore  LICENSE  README.md  __init__.py  package.json  pyproject.toml  tsconfig.json
plugin/: __init__.py  plugin.yaml
src/: index.ts
src/dat_ai_mcp/: server.py
